--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.pavipr</groupId>
     <artifactId>TestMavenReportPlugin</artifactId>
-    <version>1.7-SNAPSHOT</version>
+    <version>1.8</version>
     <packaging>maven-plugin</packaging>
 
     <name>Json Reading Maven Plugin</name>
@@ -34,7 +34,7 @@
         <connection>scm:git:git:https://github.com/pavipr/MavenReportPlugin.git</connection>
         <developerConnection>scm:git:git@github.com:pavipr/pavipr.git</developerConnection>
         <url>https://github.com/pavipr/MavenReportPlugin</url>
-        <tag>Report</tag>
+        <tag>plug</tag>
     </scm>
 
     <distributionManagement>
