--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.pavipr</groupId>
     <artifactId>TestMavenReportPlugin</artifactId>
-    <version>1.9-SNAPSHOT</version>
+    <version>1.10</version>
     <packaging>maven-plugin</packaging>
 
     <name>Json Reading Maven Plugin</name>
