--- a/pom.xml
+++ b/pom.xml
@@ -147,18 +147,18 @@
                     <version>3.8.2</version>
                 </plugin>
 
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-release-plugin</artifactId>
-                    <version>2.5.3</version>
-                    <configuration>
-                        <localCheckout>true</localCheckout>
-                        <pushChanges>false</pushChanges>
-                        <mavenExecutorId>forked-path</mavenExecutorId>
-                        <arguments>-Dgpg.passphrase=pavithra</arguments>
-                        <goal>deploy</goal>
-                    </configuration>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>org.apache.maven.plugins</groupId>-->
+<!--                    <artifactId>maven-release-plugin</artifactId>-->
+<!--                    <version>2.5.3</version>-->
+<!--                    <configuration>-->
+<!--                        <localCheckout>true</localCheckout>-->
+<!--                        <pushChanges>false</pushChanges>-->
+<!--                        <mavenExecutorId>forked-path</mavenExecutorId>-->
+<!--                        <arguments>-Dgpg.passphrase=pavithra</arguments>-->
+<!--                        <goal>deploy</goal>-->
+<!--                    </configuration>-->
+<!--                </plugin>-->
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
                     <artifactId>nexus-staging-maven-plugin</artifactId>
